# LLMTradingAgents

./: .env.example  .gitignore  README.md  arena.db  pyproject.toml
.github/workflows/: trading_session.yml
config/: arena.example.yaml  arena.yaml
dashboard/: streamlit_app.py  utils.py
dashboard/pages/: _1_Leaderboard.py  _2_Run_Trace.py  _3_Portfolio.py  _4_Trades.py  _5_Market_View.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: data.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentCard.tsx  CandlestickChart.tsx  Layout.tsx  PageWrapper.tsx  Sidebar.tsx  StatCard.tsx
frontend/src/hooks/: useData.ts
frontend/src/pages/: AIThinking.tsx  Architecture.tsx  CommandCenter.tsx  Market.tsx  Overview.tsx  Portfolio.tsx  TradeHistory.tsx
frontend/src/types/: index.ts
myllmtradingagents/: __init__.py  cli.py  logging_config.py  schemas.py  settings.py
myllmtradingagents/agents/: __init__.py  base.py  risk_guard.py  strategist.py
myllmtradingagents/arena/: __init__.py  gate.py  runner.py
myllmtradingagents/llm/: __init__.py  base.py  gemini.py  openai_compatible.py  openrouter.py  prompts.py
myllmtradingagents/market/: __init__.py  alpha_vantage.py  base.py  briefing_builder.py  coingecko.py  crypto.py  earnings.py  equity.py  features.py  fundamentals.py  insider.py  news.py  price_history.py  utils.py
myllmtradingagents/sim/: __init__.py  broker.py  fills.py  metrics.py
myllmtradingagents/storage/: __init__.py  base.py  migrations.sql  sqlite_store.py
scripts/: backtest_range.py  export_data.py
tests/: conftest.py  test_av_integration.py  test_broker.py  test_coingecko_integration.py  test_crypto_briefing.py  test_fills.py  test_market_equity.py  test_market_news.py  test_repair_fallback.py  test_risk_guard.py  test_runner.py  test_schemas.py  test_strategist.py  test_utils.py
